GeckiumMaterial - Fix list items in dark mode

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-11/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-11/_urlbar-searchbar.scss
@@ -20,6 +20,19 @@
 	}
 
 	.urlbarView-url {
+		&:not([selected]) {
+			.urlbarView-url {
+				
+			}
+		}
+	}
+}
+
+
+// FIXME: Below code was removed by nabrious in the pre-MPL2 continuity
+
+& {
+	.urlbarView-url {
 		color: #4c9817 !important;
 	}
 }
